objects/ssot__WorkResourceSkill__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveStartDateTime__c</fullName>
        <label>Effective Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ExpirationDateTime__c</fullName>
        <label>Expiration Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Work Resource Skill Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SkillId__c</fullName>
        <label>Skill</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SkillLevelNumber__c</fullName>
        <label>Skill Level</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__WorkResourceId__c</fullName>
        <label>Work Resource</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1737626577679_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WorkResourceSkill_SkillId_map_Skill__rel</label>
        <referenceTo>ssot__Skill__dlm</referenceTo>
        <relationshipLabel>WorkResourceSkill_SkillId_map_Skill__rel</relationshipLabel>
        <relationshipName>rel_1737626577679_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1737626594137_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WorkResourceSkill_LastModifiedById_m_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>WorkResourceSkill_LastModifiedById_m_rel</relationshipLabel>
        <relationshipName>rel_1737626594137_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1737626598622_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WorkResourceSkill_CreatedById_map_Us_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>WorkResourceSkill_CreatedById_map_Us_rel</relationshipLabel>
        <relationshipName>rel_1737626598622_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>